--- a/iPhoneMainWindow.xib
+++ b/iPhoneMainWindow.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="12F37" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
-        <deployment version="1072" defaultVersion="1072" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
+        <deployment version="1072" defaultVersion="1552" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CSV_TouchAppDelegate">
@@ -189,7 +189,7 @@
         </viewController>
         <viewController title="Items" id="226" userLabel="Item controller" customClass="OzyTableViewController">
             <view key="view" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="230">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="416"/>
+                <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" id="641">
@@ -445,7 +445,7 @@
         </viewController>
         <viewController id="267" userLabel="Details controller" customClass="OzyTextViewController">
             <view key="view" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="293">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="416"/>
+                <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" id="633">
